--- a/templates/content/add_content.html
+++ b/templates/content/add_content.html
@@ -9,10 +9,23 @@
     <label for="exampleInputEmail1">TITLE</label>
     <input type="text" class="form-control" id="exampleInputEmail1" placeholder="TITLE" name="title">
   </div>
+
   <div class="form-group">
     <label for="exampleInputPassword1">LEVEL</label>
     <input type="text" class="form-control" id="exampleInputPassword1" placeholder="LEVEL" name="level">
   </div>
+
+    <div class="form-group">
+        <label for="exampleInputPassword1">What is it?</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="LEVEL" name="what">
+    </div>
+
+    <div class="form-group">
+        <label for="exampleInputPassword1">How to use it?</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="LEVEL" name="how">
+    </div>
+
+
 {#  <div class="form-group">#}
 {#    <label for="exampleInputFile">File input</label>#}
 {#    <input type="file" id="exampleInputFile">#}
