--- a/templates/content/add_content.html
+++ b/templates/content/add_content.html
@@ -12,6 +12,12 @@
 {#    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="TITLE" name="title">#}
   </div>
 
+    <div class="form-group">
+    <label for="exampleInputEmail1">classification</label>
+      {{ form.classification }}
+{#    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="TITLE" name="title">#}
+  </div>
+
 
     <div id="app" class="form-group">
         <label for="exampleInputPassword1">What is it?</label>
