--- a/templates/content/play_list.html
+++ b/templates/content/play_list.html
@@ -10,8 +10,8 @@
                 <img src="{% static 'image/play_img/play1.png' %}" >
             </div>
             <div class="content">
-                <a href="/content/all_content/">
-                <h2></h2>
+                <a href="https://aniya2023.itch.io/pygbag-test">
+                <h2>play</h2>
                 </a>
                 <p> You must rescue the little monster in the forest!
                 </p>
