--- a/static/css/content_list_style.css
+++ b/static/css/content_list_style.css
@@ -20,8 +20,8 @@
 }
 
 .buttons{
-position: relative;
-left: 0px;
+    position: relative;
+    left: 0px;
     right: 0px;
     text-align: right;
 }
@@ -34,12 +34,12 @@ left: 0px;
             /* 设置3d变化 */
             transform-style: preserve-3d;
             /* 添加透视效果 */
-            perspective: 900px;
+            perspective: 700px;
         }
 
         .shell .box {
             position: relative;
-            width: 200px;
+            width: 150px;
             height: 270px;
             transition: 0.3s;
             overflow: hidden;
@@ -53,7 +53,7 @@ left: 0px;
         /* 当鼠标所有卡片的父元素点shell上时，
         所有卡片像Y轴翻转20度 */
         .shell:hover .box {
-            transform: rotateY(20deg);
+            transform: rotateY(1deg);
         }
 
         /* 当鼠标悬浮在当前卡片上时，当前卡片的翻转角度为0，
@@ -67,7 +67,7 @@ left: 0px;
         /* 当鼠标悬浮在卡片上时，
         当前卡片后面的所有卡片全部都反向翻转负20度 */
         .shell .box:hover~.box {
-            transform: rotateY(-20deg);
+            transform: rotateY(-1deg);
         }
 
         .shell .box .images img {
@@ -87,7 +87,7 @@ left: 0px;
             color: rgb(210, 140, 140);
             transition: 0.3s;
             font-size: 20px;
-            transform: translateY(-100px);
+            transform: translateY(-50px);
         }
 
         .shell .box:hover .content h2 {
@@ -98,14 +98,47 @@ left: 0px;
             color: rgb(0, 0, 0);
             transition: 0.3s;
             font-size: 14px;
-            transform: translateY(600px);
+            transform: translateY(500px);
             background-color: rgb(230, 235, 248);
         }
 
         .shell .box:hover .content p {
-            transform: translateY(100px);
+            transform: translateY(50px);
         }
         h2{
             font-family: Algerian;
 
         }
+
+        /* 目录栏样式 */
+    /* 目录栏样式 */
+    .sidebar {
+      background-color: #f1f1f1;
+      float: left;
+      width: 200px;
+      padding: 10px;
+    }
+
+    .sidebar ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .sidebar li {
+      margin-bottom: 5px;
+    }
+
+    .sidebar li a {
+      color: #333;
+      text-decoration: none;
+    }
+
+    .sidebar .sub-menu {
+      display: none; /* 初始隐藏子目录 */
+      padding-left: 20px;
+    }
+
+    .sidebar .sub-menu li {
+      margin-bottom: 2px;
+    }
