--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -6,8 +6,8 @@
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
   --gradient-color: linear-gradient(90deg,
-                    hsl(48, 100%, 50%) 0%,
-                    hsl(28, 100%, 54%, 100%));
+  hsl(45, 56%, 77%) 0%,
+  hsl(41, 93%, 70%));
   --black-color: hsl(225, 15%, 6%);
   --reflection-color: hsla(48, 30%, 95%, .3);
   --body-color: hsl(48, 100%, 98%);
