--- a/templates/register/login.html
+++ b/templates/register/login.html
@@ -8,6 +8,13 @@
 </head>
 <body>
  <form class="box" action="{% url 'users:login' %}" method="post" novalidate>
+{#     image code #}
+     {% if form.captcha.errors %}
+                    <div class="alert alert-warning">{{ form.captcha.errors }}</div>
+                {% elif message %}
+                    <div class="alert alert-warning">{{ message }}</div>
+                {% endif %}
+{#   image code#}
      {% csrf_token %}
   <h1>Login</h1>
      <div>
@@ -18,6 +25,23 @@
          {{ form.password }}
         <span style="color: red;font-size: 1px">{{ form.password.errors.0}}</span>
      </div>
+{# 验证码尝试#}
+{#     <div>#}
+{#         {{ form.captcha }}#}
+{#        <span style="color: red;font-size: 1px">{{ form.captcha.errors.0}}</span>#}
+{#     </div>#}
+
+{#     <div class="form-group">#}
+{#     <div class="row">#}
+{#         <div class="col-xs-3">#}
+{#         <img src="ccc">#}
+{#         </div>#}
+{#         <div class="col-xs-3">#}
+{#         {{ form.code }}#}
+{#         </div>#}
+{#     </div>#}
+{#         <span style="color: red;font-size: 1px">{{ form.code.errors.0}}</span>#}
+{#     </div>#}
 
   <input type="submit" name="" value="Login">
 
@@ -26,6 +50,8 @@
 </div>
      <span style="color: red">{{ error }}</span>
 </form>
-
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+ <script src="https://cdn.bootcss.com/popper.js/1.15.0/umd/popper.js"></script>
+ <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
