--- a/templates/content/all_courses_list.html
+++ b/templates/content/all_courses_list.html
@@ -22,8 +22,8 @@
                 <p>{{ item.title }}, the style in the painting integrates temptation, fantasy and strangeness
                 </p>
             </div>
+            <p style="font-family: Algerian; font-size: small"><a href="/content/all_courses/?id={{ item.id }}">{{ item.title }}</a></p>
         </div>
-            <p style="font-family: Algerian; font-size: smaller"><a href="/content/all_courses/?id={{ item.id }}">{{ item.title }}</a></p>
 
     </div>
 {% endfor %}
