--- a/templates/base/base1.html
+++ b/templates/base/base1.html
@@ -87,7 +87,7 @@
                         <a href="/content/ShowCourses/?lable=Linear-Algebra">Linear Algebra</a>
                         </li>
                     <li>
-                        <a href="/content/ShowCourses/?lable=Probability-and-Statistics">Probability and Statistics</a>
+                        <a href="/content/ShowCourses/?lable=Probability-and-Statistics">Probability</a>
                     </li>
                 </ul>
             </li>
@@ -96,13 +96,13 @@
                 Computer Science
                 <ul>
                     <li>
-                        <a href="/content/ShowCourses/?lable=Programming-Fundamentals">Programming Fundamentals</a>
+                        <a href="/content/ShowCourses/?lable=Programming-Fundamentals">Programming</a>
                     </li>
                     <li>
-                        <a href="/content/ShowCourses/?lable=Data-Structures-and-Algorithms">Data Structures and Algorithms</a>
+                        <a href="/content/ShowCourses/?lable=Data-Structures-and-Algorithms">Data Structures</a>
                     </li>
                     <li>
-                        <a href="/content/ShowCourses/?lable=Computer-Organization-and-Architecture">Computer Organization and Architecture</a>
+                        <a href="/content/ShowCourses/?lable=Computer-Organization-and-Architecture">Computer Organization</a>
                     </li>
                 </ul>
             </li>
@@ -123,7 +123,7 @@
                         <a href="/content/ShowCourses/?lable=Computer-Vision">Computer Vision</a>
                     </li>
                     <li>
-                        <a href="/content/ShowCourses/?lable=Reinforcement-Learning">Reinforcement Learning</a>
+                        <a href="/content/ShowCourses/?lable=Reinforcement-Learning">Reinforcement Learn</a>
                     </li>
                 </ul>
             </li>
@@ -133,7 +133,7 @@
                 Data Analysis
                 <ul>
                     <li>
-                        <a href="/content/ShowCourses/?lable=Data-Preprocessing-and-Cleaning">Data Preprocessing and Cleaning</a>
+                        <a href="/content/ShowCourses/?lable=Data-Preprocessing-and-Cleaning">Data Preprocessing</a>
                     </li>
                     <li>
                         <a href="/content/ShowCourses/?lable=Feature-Engineering">Feature Engineering</a>
@@ -142,7 +142,7 @@
                         <a href="/content/ShowCourses/?lable=Data-Visualization">Data Visualization</a>
                     </li>
                     <li>
-                        <a href="/content/ShowCourses/?lable=Data-Mining-and-Analysis">Data Mining and Analysis</a>
+                        <a href="/content/ShowCourses/?lable=Data-Mining-and-Analysis">Data Mining</a>
                     </li>
 
                 </ul>
@@ -152,7 +152,7 @@
                 AI Application Domains
                 <ul>
                     <li>
-                        <a href="/content/ShowCourses/?lable=Autonomous-Driving-and-Unmanned-Systems">Autonomous Driving and Unmanned Systems</a>
+                        <a href="/content/ShowCourses/?lable=Autonomous-Driving-and-Unmanned-Systems">Autonomous Driving</a>
                     </li>
                     <li>
                         <a href="/content/ShowCourses/?lable=Robotics">Robotics</a>
@@ -164,7 +164,7 @@
                         <a href="/content/ShowCourses/?lable=Financial-Data-Analysis-and-Prediction">Financial Data Analysis and Prediction</a>
                     </li>
                     <li>
-                        <a href="/content/ShowCourses/?lable=Intelligent-Recommendation-Systems">Intelligent Recommendation Systems</a>
+                        <a href="/content/ShowCourses/?lable=Intelligent-Recommendation-Systems">Intelligent Recommend</a>
                     </li>
                 </ul>
             </li>
