--- a/templates/content/ShowCourses.html
+++ b/templates/content/ShowCourses.html
@@ -4,13 +4,11 @@
 {% block content %}
 
     <div class="container">
-    <div>
+    <div class="reading">
         <h2>Reading</h2>
        <a href="/content/all_courses_list/">
         <button class="button">ALL</button>
         </a>
-
-
     </div>
     <div class="shell">
 {% for item in queryset %}
