--- a/templates/content/content_list.html
+++ b/templates/content/content_list.html
@@ -5,13 +5,13 @@
 
     <div class="container">
     <div>
-        <h2>Reading</h2>
+        <h2>Why not share your learning experience?</h2>
         <div class="buttons">
        <a href="/content/add/content/">
         <button class="button1">Add New</button>
         </a>
-        <a href="/content/all_read_list/">
-        <button class="button1">Read More</button>
+        <a href="/home/">
+        <button class="button1">Back</button>
         </a>
         </div>
 
