--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -35,35 +35,21 @@
         <li class="active"><a href="/content/courses_list/">study <span class="sr-only">(current)</span></a></li>
         <li><a href="/content/content_list/">share</a></li>
         <li><a href="/content/play_list/">play</a></li>
-{#        <li class="dropdown">#}
-{#          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>#}
-{#          <ul class="dropdown-menu">#}
-{#            <li><a href="#">Action</a></li>#}
-{#            <li><a href="#">Another action</a></li>#}
-{#            <li><a href="#">Something else here</a></li>#}
-{#            <li role="separator" class="divider"></li>#}
-{#            <li><a href="#">Separated link</a></li>#}
-{#            <li role="separator" class="divider"></li>#}
-{#            <li><a href="#">One more separated link</a></li>#}
-{#          </ul>#}
-{#        </li>#}
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default" >
+            <a href="/content/all_courses_list">Submit</a></button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ user_session.name }} <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="/users/profile/">Your profile</a></li>
+            <li><a href="#">log out</a></li>
           </ul>
         </li>
       </ul>
