--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -126,7 +126,15 @@
         </div>
 
     </div>
-
+<div class="chara1">
+    <img src="/static/image/course_img/PFHome.png">
+</div>
+<div class="chara2">
+    <img src="/static/image/course_img/NLPHome.png">
+</div>
+<div class="chara1">
+    <img src="/static/image/course_img/CalculusHome.png">
+</div>
 {#    <div class="button_area">#}
         <div class="button_left">
             <a href="/content/courses_list" class="button">
